RESPTHEME-117-post-meta-icon-spacing Fixed - post meta icons spacing issue

--- a/core/sass/style.scss
+++ b/core/sass/style.scss
@@ -36,7 +36,7 @@ body {
 
 [class^="icon-"],
 [class*=" icon-"] {
-    margin-right: 0px 5px;
+    margin: 0px 5px;
 }
 
 /*--------------------------------------------------------------
